@@ -71,4 +71,7 @@
 
 #define E_NONE 0
 
+#define FUSE_ZERO_SIZE 0x0000000000000000ULL
+#define FUSE_ROOT_SIZE 0xFFFFFFFFFFFFFFFFULL
+
 #endif /* _FUSE_H_ */
